add_subdirectory(connection_colors)

add_subdirectory(example2)

add_subdirectory(calculator)

add_subdirectory(images)

add_subdirectory(styles)

add_subdirectory(step_1_helloworld)

add_subdirectory(step_2_two_actions_and_memory)

add_subdirectory(step_3_http_server)

add_subdirectory(step_4_base_library)

add_subdirectory(step_5_rawsocket_library)
